--- a/Net CampMyProject/appsettings.json
+++ b/Net CampMyProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Net_CampMyProject-2BBEF59C-6BE2-4D0F-B9E0-5401BA780999;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=MYKHNIUK\\SQLEXPRESS;Database=MyFilmsDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
