- Jwt Authentication for API

--- a/Net CampMyProject/appsettings.json
+++ b/Net CampMyProject/appsettings.json
@@ -9,6 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-  
+  "AllowedHosts": "*",
+  "JWT": {
+    "Secret": "StrONGKAutH343434ENTICATIONKEy"
+  }
 }
